Allow register via username

--- a/src/app/ride.html
+++ b/src/app/ride.html
@@ -87,7 +87,7 @@
         </div>
     </div>
 
-    <script src="build/ride.js"></script>
+    <script src="/build/ride.js"></script>
 </body>
 
 </html>
